fix: 调整块滚动条位置 | Adjust the position of the block scrollbar.

--- a/style/module/block.less
+++ b/style/module/block.less
@@ -1,12 +1,5 @@
 /* 块全局样式 */
 
 .protyle-wysiwyg {
-    [data-node-id] {
-        >.protyle-attr {
-            >.protyle-attr--refcount {
-                box-shadow: 0 0 var(--custom-toolbar-tiem-active-box-shadow-spread) 0 var(--custom-box-shadow-color);
-                z-index:1; // 避免被块滚动条覆盖
-            }
-        }
-    }
+    [data-node-id] {}
 }
