--- a/style/module/panel-editor.css
+++ b/style/module/panel-editor.css
@@ -30,9 +30,19 @@
 .protyle-content > .protyle-title {
   /* 标题 */
 }
+.protyle-content > .protyle-title .protyle-attr .protyle-attr--refcount {
+  /* 块引用计数 */
+  box-shadow: 0 0 var(--custom-toolbar-tiem-active-box-shadow-spread) 0 var(--custom-box-shadow-color);
+  z-index: 1;
+}
 .protyle-content > .protyle-title .protyle-title__input {
   /*编辑区文件名*/
   background: transparent;
+}
+.protyle-content > .protyle-wysiwyg .protyle-attr .protyle-attr--refcount {
+  /* 块引用计数 */
+  box-shadow: 0 0 var(--custom-toolbar-tiem-active-box-shadow-spread) 0 var(--custom-box-shadow-color);
+  z-index: 1;
 }
 .protyle-content > .protyle-wysiwyg .dragover__top {
   box-shadow: 0 -4px 0 var(--custom-drag-top-shadow-color);
@@ -50,6 +60,7 @@
   width: 15px;
   right: 8px;
   margin: 0 4px;
+  padding: 0;
 }
 .protyle-scroll .protyle-scroll__bar {
   right: -98px;
